--- a/public/test.html
+++ b/public/test.html
@@ -4,6 +4,8 @@
         <title>My Sample Project</title>
         <!-- data-main attribute tells require.js to load
              scripts/main.js after require.js loads. -->
+        <script src="js/jquery-1.8.3.js"></script>
+        <script src="js/jquery.mobile-1.2.0.js"></script>
         <script data-main="js/main" src="js/require.js"></script>
     </head>
     <body>
