add insignificant changes

--- a/public/app.html
+++ b/public/app.html
@@ -60,7 +60,9 @@
             <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
                 <ul class="nav-list" data-role="listview" data-inset="true" >
                     <li data-theme="c">
-                        near me
+                        <a href="#"
+                            near me
+                        </a>
                     </li>
                     <li>
                         fav
