--- a/public/app.html
+++ b/public/app.html
@@ -18,6 +18,7 @@
         </script>
     </head>
     <body>
+
         <!-- Home -->
         <div data-role="page" id="page-stops">
             <div data-theme="a" data-role="header">
@@ -42,7 +43,7 @@
             <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
                 <ul class="nav-list" data-role="listview" data-inset="true" >
                     <li data-theme="c">
-                        <a href="#"
+                        <a href="#">
                             near me
                         </a>
                     </li>
@@ -59,6 +60,7 @@
         <!-- Routes page -->
         <div data-role="page" id="page-routes">
             <div data-role="content" class="app">
+                test!
             </div>
         </div>
 
