--- a/public/app.html
+++ b/public/app.html
@@ -9,7 +9,7 @@
         </title>
         <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+        <link rel="stylesheet" href="stylesheets/jquery.mobile-1.2.0.css" />
         <script src="js/jquery-1.8.3.js"></script>
         <script src="js/jquery.mobile-1.2.0.js"></script>
         <script src="js/mustache.js"></script>
