--- a/public/app.html
+++ b/public/app.html
@@ -36,7 +36,7 @@
             </div>
             <div data-role="content" class="app">
             </div>
-            <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
+<!--             <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
                 <ul class="nav-list" data-role="listview" data-inset="true" >
                     <li data-theme="c">
                         <a href="#">
@@ -51,7 +51,7 @@
                     </li>
                 <ul>
             </div>
-        </div>
+ -->        </div>
 
         <!-- Routes page -->
         <div data-role="page" id="page-routes">
@@ -73,6 +73,7 @@
                 <a href="#page-routes" data-transition="slide">
                 <div class="col-icon">
                     <img src="images/bus.png" />
+                    <span class="transit-type"> TTC</span>
                 </div>
                 <div class="col-info">
                        Route of type <span class="transit-type">{{type}} </span> with <span class="transit-name"> {{name}} </span> comes at {{#times}}{{.}},{{/times}}
@@ -81,7 +82,7 @@
                     <div class="time-icon-outer">
                         <div class="time-icon-inner">
                             <p class="time-text">
-                                <span class="time"> 10</span>
+                                <span class="time">50 </span>
                                 <!-- <span class="time-metric">mins</span> --!>
                             </p>
                         </div>
