--- a/public/app.html
+++ b/public/app.html
@@ -56,7 +56,21 @@
         <!-- Routes page -->
         <div data-role="page" id="page-routes">
             <div data-role="content" class="app">
-                test!
+                <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
+                    <ul class="nav-list" data-role="listview" data-inset="true" >
+                        <li data-theme="c">
+                            <a href="#">
+                                near me
+                            </a>
+                        </li>
+                        <li>
+                            fav
+                        </li>
+                        <li>
+                            test
+                        </li>
+                    <ul>
+                </div>
             </div>
         </div>
 
