Rollback app.html changes

--- a/public/app.html
+++ b/public/app.html
@@ -56,21 +56,7 @@
         <!-- Routes page -->
         <div data-role="page" id="page-routes">
             <div data-role="content" class="app">
-                <div data-theme="a" data-role="footer" data-position="fixed" id="navigation">
-                    <ul class="nav-list" data-role="listview" data-inset="true" >
-                        <li data-theme="c">
-                            <a href="#">
-                                near me
-                            </a>
-                        </li>
-                        <li>
-                            fav
-                        </li>
-                        <li>
-                            test
-                        </li>
-                    <ul>
-                </div>
+                test!
             </div>
         </div>
 
