--- a/public/app.html
+++ b/public/app.html
@@ -14,7 +14,7 @@
         <script src="js/jquery.mobile-1.2.0.js"></script>
         <script src="js/mustache.js"></script>
         <script src="js/mustache_helper.js"></script>
-        <script data-main="js/main" src="js/require.js"></script>
+        <script src="js/main.js"></script>
         </script>
     </head>
     <body>
@@ -54,7 +54,7 @@
  -->        </div>
 
         <!-- Routes page -->
-        <div data-role="page" id="page-routes">
+        <div id="page-routes">
             <div data-role="content" class="app">
                 test!
             </div>
@@ -65,13 +65,12 @@
         <img src="{{map}}"/>
         <ul data-role="listview" data-divider-theme="b" data-inset="true" class="transit-list">
             {{#stops}}
-            <span style="color:{{color_fg}}; text-shadow:none; background-color:{{color_bg}}">{{letter}}</span>
             <li data-role="list-divider" role="heading" class="stop">
-               Stop at: {{lat}},{{lon}} 
+               <span style="color:{{color_fg}}; text-shadow:none; background-color:{{color_bg}}; border:2px solid white;">{{letter}}</span> Stop at: {{lat}},{{lon}} 
             </li>
             {{#routes}}
             <li data-theme="c">
-                <a href="#page-routes" data-transition="slide">
+                <a href="#">
                 <div class="col-icon">
                     <img src="images/bus.png" />
                     <span class="transit-type"> TTC</span>
@@ -94,6 +93,9 @@
             {{/routes}}                    
             {{/stops}}
         </ul>
+        </script>
+        <script type="template/mustache" id="times-tpl">
+times...
         </script>
     </body>
 </html>
