--- a/public/maps.html
+++ b/public/maps.html
@@ -45,5 +45,9 @@
             <div data-role="content" class="app">
             </div>
         </div>
+        <script type="template/mustache" id="stops-tpl">
+                <img class="map" src="{{map}}"/>
+        </script>
+
     </body>
 </html>
