--- a/public/maps.html
+++ b/public/maps.html
@@ -45,7 +45,7 @@
             <div data-role="content" class="app">
             </div>
         </div>
-        <script type="template/mustache" id="stops-tpl">
+        <script type="template/mustache" id="maps-tpl">
                 <img class="map" src="{{map}}"/>
         </script>
 
