less blue, more map

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <script type="template/mustache" id="stops-tpl">
-
+        <img src="{{map}}"/>
         <ul data-role="listview" data-divider-theme="b" data-inset="true" class="transit-list">
             {{#stops}}
             <li data-role="list-divider" role="heading" class="stop" >
