--- a/public/maps.html
+++ b/public/maps.html
@@ -29,7 +29,7 @@
                     Transit Map
                 </h3>
                <div data-role="fieldcontain" class="options">
-                     <select name="search" data-mini="true">
+                     <select name="select" data-mini="true">
                         <option value="main">
                             Nearby
                         </option>
