--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="initial-scale=0.75, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <title>
-            Ride to the Future
         </title>
-        <link rel="icon" type="image/png" href="images/bus.png" />
-        <link rel="apple-touch-icon-precomposed" type="image/png" href="images/bus.png" />
         <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
         <link rel="stylesheet" href="stylesheets/jquery.mobile-1.2.0.css" />
@@ -51,8 +48,8 @@
 
         <!-- Routes page -->
         <div data-role="page" id="page-routes">
+            
             <div data-role="content" class="app">
-                test!
             </div>
         </div>
 
@@ -107,7 +104,7 @@
                     <div class="time-icon-outer">
                         <div class="time-icon-inner">
                             <p class="time-text">
-                                <span class="time">{{.}} </span>
+                                <span class="time">{{first_time}} </span>
                             </p>
                         </div>
                     </div>
