--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                 <a href="#">
                 <div class="col-icon">
                     <img src="images/bus.png" />
-                    <span class="transit-type">{{type}}</span>
+                    <span class="transit-type"></span>
                 </div>
                 <div class="col-time">
                     <div class="time-icon-outer">
@@ -98,7 +98,7 @@
                 <a href="#">
                 <div class="col-icon">
                     <img src="images/bus.png" />
-                    <span class="transit-type">{{type}}</span>
+                    <span class="transit-type"></span>
                 </div>
                 <div class="col-time">
                     <div class="time-icon-outer">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-info">
-                       Route of type <span class="transit-type">{{type}} </span> with <span class="transit-name"> {{name}} </span> 
+                       {{direction}}
                 </div>
                 </a>
             </li>
