--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                     <div class="time-icon-outer">
                         <div class="time-icon-inner">
                             <p class="time-text">
-                                <span class="time">{{first_time}} </span>
+                                <span class="time">{{.}} </span>
                             </p>
                         </div>
                     </div>
