--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="initial-scale=0.75, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="apple-mobile-web-app-title" content="Bus Pointer" />
         <title>
-            Ride to the Future
+            Bus Pointer
         </title>
         <link rel="icon" type="image/png" href="images/bus.png" />
         <link rel="apple-touch-icon-precomposed" type="image/png" href="images/bus.png" />
@@ -29,7 +30,7 @@
             <div data-theme="a" data-role="header">
 
                 <h3 class="app-title">
-                    Transit
+                    Bus Pointer
                 </h3>
                <div data-role="fieldcontain" class="options">
                     <select name="search" data-mini="true">
