--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,11 @@
                 </h3>
                <div data-role="fieldcontain" class="options">
                     <select name="select" data-mini="true">
-                        <option value="main" >
+                        <option value="index" >
                             Nearby
                         </option>
                         <option value="search">
                             Search
-                        </option>
-                        <option value="maps">
-                            Map
                         </option>
                     </select>
                 </div> 
