--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="initial-scale=1.0" />
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <meta name="apple-mobile-web-app-title" content="Bus Pointer" />
-        <title>
-            Bus Pointer
-        </title>
+        <title>Bus Pointer</title>
         <link rel="icon" type="image/png" href="images/bus.png" />
-        <link rel="apple-touch-icon-precomposed" type="image/png" href="images/bus.png" />
+        <link rel="apple-touch-icon-precomposed" type="image/png" href="images/apple-touch-icon-precomposed.png" />
         <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
         <link rel="stylesheet" href="stylesheets/jquery.mobile-1.2.0.css" />
