Hide broken navigation dropdown, add header and back button to routes page.

--- a/public/index.html
+++ b/public/index.html
@@ -26,28 +26,31 @@
         <!-- Home -->
         <div data-role="page" id="page-stops" ata-dom-cache="true" data-prev="search" data-next="maps" data-url="index">
             <div data-theme="a" data-role="header">
-
-                <h3 class="app-title">
-                    Bus Pointer
-                </h3>
-               <div data-role="fieldcontain" class="options">
-                    <select name="select" data-mini="true">
-                        <option value="index" >
-                            Nearby
-                        </option>
-                        <option value="search">
-                            Search
-                        </option>
-                    </select>
-                </div> 
+               <h3 class="app-title">
+                   Bus Pointer
+               </h3>
+               <!-- <div data-role="fieldcontain" class="options"> -->
+               <!--      <select name="select" data-mini="true"> -->
+               <!--          <option value="index" > -->
+               <!--              Nearby -->
+               <!--          </option> -->
+               <!--          <option value="search"> -->
+               <!--              Search -->
+               <!--          </option> -->
+               <!--      </select> -->
+               <!--  </div> --> 
             </div>
             <div data-role="content" class="app">
             </div>
        </div>
 
         <!-- Routes page -->
-        <div data-role="page" id="page-routes">
-            
+        <div data-role="page" id="page-routes" data-add-back-btn="true">
+            <div data-theme="a" data-role="header">
+               <h3 class="app-title">
+                   Bus Pointer
+               </h3>
+            </div>
             <div data-role="content" class="app">
             </div>
         </div>
