--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="apple-mobile-web-app-title" content="Bus Pointer" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1.0,user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Bus Pointer">
 		<title>Bus Pointer</title>
-		<link rel="icon" type="image/png" href="images/bus.png" />
-		<link rel="apple-touch-icon-precomposed" type="image/png" href="images/apple-touch-icon-precomposed.png" />
-		<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" href="stylesheets/jquery.mobile-1.2.0.css" />
-		<link rel="stylesheet" href="fonts/limelight/stylesheet.css" type="text/css" charset="utf-8">
-		<script src="js/jquery-1.8.3.js"></script>
-		<script src="js/jquery.mobile-1.2.0.js"></script>
+		<link rel="icon" type="image/png" href="images/bus.png">
+		<link rel="apple-touch-icon-precomposed" type="image/png" href="images/apple-touch-icon-precomposed.png">
+		<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css">
+		<link rel="stylesheet" href="fonts/limelight/stylesheet.css" type="text/css">
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 		<script src="js/mustache.js"></script>
 		<script src="js/mustache_helper.js"></script>
 		<script src="js/main.js"></script>
-		</script>
 	</head>
 	<body>
 		<!-- Home -->
